# bonesis

./: .gitignore  MANIFEST.in  Makefile  README.md  TODO  __init__.py  _config.yml  _toc.yml  cite.md  demo.py  index.md  installation.md  intro.md  language.md  overview.md  pyproject.toml  references.bib  related-publications.md  requirements.txt  setup.py  views.md
_raw/: online-demo.html
_static/: style.css
bonesis/: __init__.py  aeon.py  asp_encoding.py  cli.py  debug.py  domains.py  language.py  manager.py  playground.py  reprogramming.py  snippets.py  utils.py  views.py
bonesis-asp/: attractor.asp  bn-domain.asp  canonical-bn.asp  complete-cfg.asp  eval.asp  fixpoint.asp  nonreach.asp  reach.asp  show-bn.asp  trapspace.asp
bonesis-doc/: intro.md  reprogramming.md  synthesis.md  views.md
bonesis0/: __init__.py  asp_encoding.py  clingo_solving.py  diversity.py  gil_utils.py  proxy_control.py  subset_portfolio.cfg  utils.py
conda/: meta.yaml
doc/: installation.md
examples/: Tutorial.ipynb  all_fixpoints.py  contexts.py  control_attractors.py  control_fixpoints.py  count_matching.py  dedekind.py  diversity.py  extra_somes.py  optimization.py  project_bns.py  spec_state_equalities.py  test_dyncfg.py  toy1.sif  view_configurations.py
gallery/: .gitignore  fasync-transitions.md  index.md  simple_example1.md
internals/: asp-encodings.md
tests/: all_attractors.py  all_fixpoints.py  allreach_attractors.py  allreach_fixpoints.py  allreach_fixpoints_mutants.py  fork.py  hypercubes.py  in_attractor.py  mutant_all_attractors.py  pkn.py  settings.py  (+15 more)
(+21 files in other folders)
